--- a/templates/base/web_base.html
+++ b/templates/base/web_base.html
@@ -11,7 +11,7 @@
     <meta content="Coderthemes" name="author" />
 
     <!-- App favicon -->
-    <link rel="shortcut icon" href="/static/assets/images/favicon.svg">
+    <link rel="shortcut icon" href="/static/assets/images/CJ_Commodities_Logo.png">
 
 	<!-- DataTables CSS -->
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
