--- a/templates/partials/sidenav.html
+++ b/templates/partials/sidenav.html
@@ -8,13 +8,13 @@
             <!-- Brand Logo -->
             <a href="/" class="logo">
                 <span class="logo-light">
-                    <span class="logo-lg"><img src="/static/assets/images/logo-light (1)-afarinick.png" alt="logo" style="width: 60px; height: 60px;"><span></span></span>
-                    <span class="logo-sm"><img src="/static/assets/images/logo-light (1)-afarinick.png" style="width: 40px; height: 40px;" alt="small logo"></span>
+                    <span class="logo-lg"><img src="/static/assets/images/CJ_Commodities_Logo.png" alt="logo" style="width: 100px; height: 50px;"><span></span></span>
+                    <span class="logo-sm"><img src="/static/assets/images/CJ_Commodities_Logo.png" style="width: 40px; height: 20px;" alt="small logo"></span>
                 </span>
 
                 <span class="logo-dark">
-                    <span class="logo-lg"><img src="/static/assets/images/logo-dark-afarinick.png" alt="dark logo" style="width: 60px; height: 60px;"><span></span></span>
-                    <span class="logo-sm"><img src="/static/assets/images/logo-dark-afarinick.png" style="width: 40px; height: 40px;" alt="small logo"></span>
+                    <span class="logo-lg"><img src="/static/assets/images/CJ_Commodities_Logo.png" alt="dark logo" style="width: 100px; height: 50px;"><span></span></span>
+                    <span class="logo-sm"><img src="/static/assets/images/CJ_Commodities_Logo.png" style="width: 40px; height: 20px;" alt="small logo"></span>
                 </span>
             </a>
 
