--- a/templates/core/farmer-list.html
+++ b/templates/core/farmer-list.html
@@ -20,8 +20,8 @@
                         </button>
                     </div>
                     <div class="card-body">
-                        <div class="row mb-3">
-                            <div class="col-md-12">
+                        <div class="row mb-3" style="display: flex;justify-content: flex-end;align-items: flex-end;">
+                            <div class="col-md-12" tyle="display: flex;justify-content: flex-end;align-items: flex-end;">
                                 <div class="btn-group" role="group">
                                     <button type="button" class="btn btn-outline-primary filter-btn active" data-filter="all">
                                         All Farmers
