--- a/templates/partials/sidenav.html
+++ b/templates/partials/sidenav.html
@@ -11,7 +11,7 @@
     </style>
 
     <!-- Brand Logo -->
-    <a href="/" class="logo">
+    <a href="/" class="logo" style="background-color: rgb(7, 155, 123);">
         <span class="logo-light">
             <span class="logo-lg"><img src="/static/assets/images/CJ_Commodities_Logo.png" alt="logo" style="width: 100px; height: 50px;"><span></span></span>
             <span class="logo-sm"><img src="/static/assets/images/CJ_Commodities_Logo.png" style="width: 40px; height: 20px;" alt="small logo"></span>
@@ -57,15 +57,16 @@
                 <div class="collapse" id="sidebarAssignments">
                     <ul class="sub-menu">
                         <li class="side-nav-item">
-                            <a href="/portal/assignments-overview/" class="side-nav-link">
-                                <span class="menu-text">View All Assignments</span>
-                            </a>
-                        </li>
-                        <li class="side-nav-item">
                             <a href="/portal/staff-management/" class="side-nav-link">
                                 <span class="menu-text">Assign/Unassign Enumerators</span>
                             </a>
                         </li>
+                        <li class="side-nav-item">
+                            <a href="/portal/assignments-overview/" class="side-nav-link">
+                                <span class="menu-text">View All Assignments</span>
+                            </a>
+                        </li>
+                        
                         <li class="side-nav-item">
                             <a href="/portal/priorities-deadlines-assignments/" class="side-nav-link">
                                 <span class="menu-text">Set Deadlines & Priorities</span>
@@ -125,16 +126,7 @@
                                 <span class="menu-text">Review Enumerator Responses</span>
                             </a>
                         </li>
-                        <!-- <li class="side-nav-item">
-                            <a href="/queries/flag-issues/" class="side-nav-link">
-                                <span class="menu-text">Flag Issues for Review</span>
-                            </a>
-                        </li>
-                        <li class="side-nav-item">
-                            <a href="/queries/escalate-cases/" class="side-nav-link">
-                                <span class="menu-text">Escalate Cases to Supervisors</span>
-                            </a>
-                        </li> -->
+                        
                     </ul>
                 </div>
             </li>
@@ -187,7 +179,7 @@
                             </a>
                         </li>
                         <li class="side-nav-item">
-                            <a href="/portal/societies/" class="side-nav-link">
+                            <a href="/portal/community-pci/" class="side-nav-link">
                                 <span class="menu-text">Community Protective Index</span>
                             </a>
                         </li>
@@ -202,7 +194,7 @@
                             </a>
                         </li>
                         <li class="side-nav-item">
-                            <a href="/risk-assessment/" class="side-nav-link">
+                            <a href="/portal/risk-assessment/" class="side-nav-link">
                                 <span class="menu-text">Risk Assessment</span>
                             </a>
                         </li>
