--- a/templates/core/community_pci.html
+++ b/templates/core/community_pci.html
@@ -58,7 +58,7 @@
                         <!-- Statistics Cards -->
                         <div class="row mb-4">
                             <div class="col-md-3">
-                                <div class="card bg-success text-white">
+                                <div class="card bg-success-subtle border-success-subtle text-dark">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between">
                                             <div>
@@ -73,7 +73,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3">
-                                <div class="card bg-warning text-white">
+                                <div class="card bg-warning-subtle border-warning-subtle text-dark">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between">
                                             <div>
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3">
-                                <div class="card bg-danger text-white">
+                                <div class="card bg-danger-subtle border-danger-subtle text-dark">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between">
                                             <div>
@@ -103,7 +103,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3">
-                                <div class="card bg-info text-white">
+                                <div class="card bg-info-subtle border-info-subtle text-dark">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between">
                                             <div>
