--- a/templates/core/review_responses.html
+++ b/templates/core/review_responses.html
@@ -109,7 +109,7 @@
                         <!-- Statistics Cards -->
                         <div class="row mb-4">
                             <div class="col-md-3">
-                                <div class="card bg-primary text-white">
+                                <div class="card bg-primary-subtle border-primary-subtle text-dark">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between">
                                             <div>
@@ -124,7 +124,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3">
-                                <div class="card bg-success text-white">
+                                <div class="card bg-success-subtle border-success-subtle text-dark">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between">
                                             <div>
@@ -139,7 +139,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3">
-                                <div class="card bg-warning text-white">
+                                <div class="card bg-warning-subtle border-warning-subtle text-dark">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between">
                                             <div>
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3">
-                                <div class="card bg-danger text-white">
+                                <div class="card bg-danger-subtle border-danger-subtle text-dark">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between">
                                             <div>
