--- a/templates/core/send_query.html
+++ b/templates/core/send_query.html
@@ -63,6 +63,7 @@
                                         <th>PRIORITY</th>
                                         <th>STATUS</th>
                                         <th>Enumerator</th>
+                                        <th>Staff ID</th>
                                         <th>CREATED DATE</th>
                                         <th>DUE DATE</th>
                                         <th>RESPONSES</th>
@@ -263,6 +264,7 @@ $(document).ready(function() {
                 }
             },
             { data: 'assigned_to' },
+            { data: 'enumerator_id' },
             { data: 'created_date' },
             { 
                 data: 'due_date',
