--- a/accounts/templates/auth/auth-register.html
+++ b/accounts/templates/auth/auth-register.html
@@ -11,19 +11,19 @@
 
     <!-- App favicon -->
    <!-- App favicon -->
-    <link rel="shortcut icon" href="/core/static/assets/images/favicon.svg">
+    <link rel="shortcut icon" href="/static/assets/images/favicon.svg">
 
     <!-- Vendor css -->
-    <link href="/core/static/assets/css/vendor.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/assets/css/vendor.min.css" rel="stylesheet" type="text/css" />
 
     <!-- App css -->
-    <link href="/core/static/assets/css/app.min.css" rel="stylesheet" type="text/css" id="app-style" />
+    <link href="/static/assets/css/app.min.css" rel="stylesheet" type="text/css" id="app-style" />
 
     <!-- Icons css -->
-    <link href="/core/static/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
 
     <!-- Theme Config Js -->
-    <script src="/core/static/assets/js/config.js"></script>
+    <script src="/static/assets/js/config.js"></script>
 
 </head>
 
@@ -40,7 +40,7 @@
                                 <div class="text-center">
                                     <div class="my-3">
                                         <a href="/">
-                                            <span><img src="/core/static/assets/images/logo-dark-afarinick.png" alt="" height="80"></span>
+                                            <span><img src="/static/assets/images/logo-dark-afarinick.png" alt="" height="80"></span>
                                         </a>
                                     </div>
                                     <h5 class="text-muted text-uppercase py-3 font-16">Sign up</h5>
@@ -101,7 +101,7 @@
 
                     <div class="row mt-3">
                         <div class="col-12 text-center">
-                            <p class="text-white-50">Already have account? <a href="/login/" class="text-white ml-1"><b>Sign In</b></a></p>
+                            <p class="text-white-50">Already have account? <a href="/accounts/login/" class="text-white ml-1"><b>Sign In</b></a></p>
                         </div> <!-- end col -->
                     </div>
                     <!-- end row -->
@@ -114,10 +114,10 @@
     </div>
 
     <!-- Vendor js -->
-    <script src="/core/static/assets/js/vendor.min.js"></script>
+    <script src="/static/assets/js/vendor.min.js"></script>
 
     <!-- App js -->
-    <script src="/core/static/assets/js/app.js"></script>
+    <script src="/static/assets/js/app.js"></script>
 
 
 </body>
